# resetpass_email_cors_cloud

django_reset_password/: .gitignore  pyproject.toml
django_reset_password/quotessite/: manage.py
django_reset_password/quotessite/quotes/: admin.py  forms.py  models.py  urls.py  views.py
django_reset_password/quotessite/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_alter_author_fullname.py
django_reset_password/quotessite/quotes/templates/quotes/: author.html  author_see.html  base.html  index.html  quote.html
django_reset_password/quotessite/quotes/templatetags/: extract.py
django_reset_password/quotessite/quotessite/: asgi.py  settings.py  urls.py  wsgi.py
django_reset_password/quotessite/users/: forms.py  urls.py  views.py
django_reset_password/quotessite/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html  signup.html
django_reset_password/quotessite/utils/: migration.py
fastapi_email_cors_cloudinary + reset_password/: pyproject.toml
fastapi_email_cors_cloudinary + reset_password/src/conf/: config.py
fastapi_email_cors_cloudinary + reset_password/src/repository/: auth.py  contacts.py
fastapi_email_cors_cloudinary + reset_password/src/routes/: auth.py  contacts.py
fastapi_email_cors_cloudinary + reset_password/src/services/: auth.py
fastapi_email_cors_cloudinary/postgres-data/global/: pg_control  pg_internal.init
fastapi_email_cors_cloudinary/src/: schemas.py
fastapi_email_cors_cloudinary/src/routes/: auth.py  (+1 more)
(+9 files in other folders)
