[tool.poetry]
name = "homework-12"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
psycopg2 = "^2.9.9"
pydantic = "^2.5.2"
alembic = "^1.13.0"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
uvicorn = "^0.24.0.post1"
fastapi-mail = "^1.4.1"
jinja2 = "^3.1.2"
jose = "^1.0.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
